@@ -1,5 +1,5 @@
 /* A utility program originally written for the Linux OS SCSI subsystem.
- *  Copyright (C) 1999-2018 D. Gilbert
+ *  Copyright (C) 1999-2020 D. Gilbert
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
  *  the Free Software Foundation; either version 2, or (at your option)
@@ -33,7 +33,7 @@
 
 #define ME "sg_reset: "
 
-static const char * version_str = "0.66 20180515";
+static const char * version_str = "0.67 20200501";
 
 #ifndef SG_SCSI_RESET
 #define SG_SCSI_RESET 0x2284
